--- a/Neural Network/SVM_vs_Neural_Network.ipynb
+++ b/Neural Network/SVM_vs_Neural_Network.ipynb
@@ -8003,6 +8003,31 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
+        "**Interpretation of Neural Network Hyperparameters**\n",
+        "\n",
+        "Network Architecture (3 layers):\n",
+        "\n",
+        "* Layer 1: 224 neurons - This is the largest layer with significantly more capacity. It's designed to capture complex, high-dimensional patterns from the input features (likely breast cancer diagnostic measurements)\n",
+        "* Layer 2: 32 neurons - A dramatic reduction that forces the network to compress and distill the most important features learned in Layer 1\n",
+        "* Layer 3: 32 neurons - Maintains the compressed representation before final classification\n",
+        "\n",
+        "Dropout Strategy:\n",
+        "\n",
+        "* Layer 1: 10% dropout - Minimal regularization on your main feature extraction layer, suggesting the model benefits from keeping most connections active\n",
+        "* Layers 2 & 3: 0% dropout - No dropout in the compressed layers indicates these layers don't suffer from overfitting, likely because the dramatic dimensionality reduction (224→32) already acts as regularization\n",
+        "\n",
+        "Learning Rate: 0.002051\n",
+        "\n",
+        "This is a relatively conservative learning rate, suggesting:\n",
+        "* Stable, gradual convergence\n",
+        "* Fine-grained weight updates for better generalization\n",
+        "* The optimizer likely found this sweet spot between too fast (unstable) and too slow (gets stuck)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
         "## Training the Final Model\n",
         "\n",
         "Now we train the best model configuration on our full training set with more epochs for better convergence."
